# grapichs-template

./: CMakeLists.txt  README.md
app/: Application.cpp  Application.h  CMakeLists.txt  cube.h  main.cpp
app/shaders/: cubeshaders.h
examples/example_2/shaders/: triangle.h
framework/: CMakeLists.txt
framework/GLFWApplication/: CMakeLists.txt  GLFWApplication.cpp  GLFWApplication.h
framework/GeometricTools/: CMakeLists.txt  GeometricTools.h
framework/Rendering/: BufferLayout.h  CMakeLists.txt  Camera.h  IndexBuffer.cpp  IndexBuffer.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.h  RenderCommands.h  ShadersDataTypes.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
framework/Shaders/: CMakeLists.txt  Shaders.cpp  Shaders.h
framework/Texture/: CMakeLists.txt  TextureManager.cpp  TextureManager.h
